Updating csproj with proper packages

--- a/MicrosoftGraph_Security_API_Sample/Web.config
+++ b/MicrosoftGraph_Security_API_Sample/Web.config
@@ -9,33 +9,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
-
-    <!--<add key="ida:AppId" value="72788d33-9992-4aa0-922a-e2067de9a77f"/>
-    <add key="ida:AppSecret" value="vlpEPN5612%_tylqVZJQ3#{"/>
-    <add key="ida:RedirectUri" value="https://isgclientsdkdemo.azurewebsites.net"/>
-    <add key="ida:NotificationUrl" value="https://isgclientsdkdemo.azurewebsites.net/notification/listen"/>-->
     
-    <!--<add key="ida:AppId" value="73ff0f32-dc43-419e-a069-8f0bd69cba93" />
-    <add key="ida:AppSecret" value="isqcyJY4481hjINGVC6^])#" />
-    <add key="ida:RedirectUri" value="https://isgsdkdemov3.azurewebsites.net" />
-    <add key="ida:NotificationUrl" value="https://isgsdkdemov3.azurewebsites.net/notification/listen"/>-->
-
-    <!--<add key="ida:AppId" value="a50450c1-497e-4e90-a5e1-1ea79c40593a" />
-    <add key="ida:AppSecret" value="rgBOCOEJR735@tjsnv52=-#" />
-    <add key="ida:RedirectUri" value="https://isgsdkdemov4.azurewebsites.net" />
-    <add key="ida:NotificationUrl" value="https://isgsdkdemov4.azurewebsites.net/notification/listen" />-->
-
-     <add key="ida:NotificationUrl" value="https://b89d5f58.ngrok.io/notification/listen"/>
-   
-    <add key="ida:AppId" value="4e1c3091-347b-4e2c-bfca-b11c4cd66183" />
-    <add key="ida:AppSecret" value="nvzxG626!]$fqaUGZCGG97$" />
-    <add key="ida:RedirectUri" value="http://localhost:55065/" />
-    
-    <!--<add key="ida:AppId" value="Enter_Your_Appid" />
+    <add key="ida:AppId" value="Enter_Your_Appid" />
     <add key="ida:AppSecret" value="Enter_Your_AppSecret" />
     <add key="ida:RedirectUri" value="Enter_Your_URL" />
-    <add key="ida:NotificationUrl" value="ENTER_YOUR_URL/notification/listen" />-->
+    <add key="ida:NotificationUrl" value="ENTER_YOUR_URL/notification/listen" />
 
     <add key="ida:GraphScopes" value="User.Read" />
   </appSettings>
