Updating Web.config

--- a/MicrosoftGraph_Security_API_Sample/Web.config
+++ b/MicrosoftGraph_Security_API_Sample/Web.config
@@ -10,10 +10,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     
-    <add key="ida:AppId" value="Enter_Your_Appid" />
+    <!--<add key="ida:AppId" value="Enter_Your_Appid" />
     <add key="ida:AppSecret" value="Enter_Your_AppSecret" />
     <add key="ida:RedirectUri" value="Enter_Your_URL" />
-    <add key="ida:NotificationUrl" value="ENTER_YOUR_URL/notification/listen" />
+    <add key="ida:NotificationUrl" value="ENTER_YOUR_URL/notification/listen" />-->
 
     <add key="ida:GraphScopes" value="User.Read" />
   </appSettings>
