--- a/MicrosoftGraph_Security_API_Sample/Web.config
+++ b/MicrosoftGraph_Security_API_Sample/Web.config
@@ -10,7 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     
-    <!--Update here with your own AppId, AppSecrest and the URL -->
+    <!--Update here with your own AppId, AppSecret and the URL -->
     <add key="ida:AppId" value="Enter_Your_Appid" />
     <add key="ida:AppSecret" value="Enter_Your_AppSecret" />
     <add key="ida:RedirectUri" value="Enter_Your_URL" />
