Added List subscriptions and admin consent page

--- a/MicrosoftGraph_Security_API_Sample/Web.config
+++ b/MicrosoftGraph_Security_API_Sample/Web.config
@@ -17,6 +17,7 @@
     <add key="ida:NotificationUrl" value="ENTER_YOUR_URL/notification/listen" />
 
     <add key="ida:GraphScopes" value="User.Read" />
+    <add key="GraphBaseUrl" value="https://graph.microsoft.com/beta" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
