--- a/MicrosoftGraph_Security_API_Sample/MicrosoftGraph_Security_API_Sample.csproj
+++ b/MicrosoftGraph_Security_API_Sample/MicrosoftGraph_Security_API_Sample.csproj
@@ -27,7 +27,7 @@
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
     <Use64BitIISExpress />
-   </PropertyGroup>
+  </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
@@ -57,11 +57,11 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.Graph, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.Graph, Version=1.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SecurityGraphDlls\Net45\Microsoft.Graph.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Graph.Core, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.Graph.Core, Version=1.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SecurityGraphDlls\Net45\Microsoft.Graph.Core.dll</HintPath>
     </Reference>
@@ -197,6 +197,7 @@
     <Compile Include="Models\AlertModel.cs" />
     <Compile Include="Models\AlertFilters.cs" />
     <Compile Include="Models\AlertResultItemModel.cs" />
+    <Compile Include="Models\SubscriptionResultsModel.cs" />
     <Compile Include="Models\AlertResultsModel.cs" />
     <Compile Include="Models\GraphUserModel.cs" />
     <Compile Include="Models\Notification.cs" />
@@ -249,6 +250,7 @@
     <Content Include="Views\Home\_UpdateAlertPartialView.cshtml" />
     <Content Include="Views\Home\_SubscriptionPartialView.cshtml" />
     <Content Include="Views\Notification\Notification.cshtml" />
+    <Content Include="Views\Home\AdminConsent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
