--- a/MicrosoftGraph_Security_API_Sample/packages.config
+++ b/MicrosoftGraph_Security_API_Sample/packages.config
@@ -5,13 +5,15 @@
   <package id="jQuery" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
+  <package id="Microsoft.Graph.IsgSdk" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Graph.IsgSdk.Core" version="3.0.0" targetFramework="net461" />
   <package id="Microsoft.Identity.Client" version="1.1.0-preview" targetFramework="net452" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.4" targetFramework="net461" />
