updates to config

--- a/MicrosoftGraph_Security_API_Sample/Web.config
+++ b/MicrosoftGraph_Security_API_Sample/Web.config
@@ -11,9 +11,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     
     <!--Update here with your own AppId, AppSecret and the URL -->
-    <add key="ida:AppId" value="Enter_Your_Appid" />
-    <add key="ida:AppSecret" value="Enter_Your_AppSecret" />
-    <add key="ida:RedirectUri" value="Enter_Your_URL" />
+    <add key="ida:AppId" value="9c1d9b6c-45fd-4a58-94aa-a1980e0b1818" />
+    <add key="ida:AppSecret" value="xgSFFq4R9OkG4+Q3bFDxlByAk4cd+l3ZldQ83waJvQY=" />
+    <add key="ida:RedirectUri" value="https://localhost:44300" />
     <add key="ida:NotificationUrl" value="ENTER_YOUR_URL/notification/listen" />
 
     <add key="ida:GraphScopes" value="User.Read" />
