--- a/MicrosoftGraph_Security_API_Sample/MicrosoftGraph_Security_API_Sample.csproj
+++ b/MicrosoftGraph_Security_API_Sample/MicrosoftGraph_Security_API_Sample.csproj
@@ -303,7 +303,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>55065</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:55065/</IISUrl>
+          <IISUrl>https://localhost:44300/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
